--- a/css/styles.css
+++ b/css/styles.css
@@ -28,14 +28,14 @@
     height: 500px;
     margin: 20px;
     padding: 15px;
-    
+    flex: 1;
     
 }
 
 .art {
     background-color: blue;
     border: 1px solid black;
-    width: 450px;
+    width: 850px;
     height: 250px;
     margin : 10px;
     padding: 15px;
