--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,5 @@
-#container1 {
+
+#header {
     display: flex;
     justify-content: space-evenly;
     border: 1px solid red;
@@ -6,7 +7,7 @@
 
 }
 
-/*#container2 {
+/*#nav {
 
     display: flex;
     justify-content: space-evenly;
@@ -14,7 +15,13 @@
     margin: 20px;
 }*/
 
-#container3 {
+ul {
+    display: flex;
+    list-style: none;
+    justify-content: space-around;
+}
+
+main{
     border: 1px solid green;
     margin: 20px;
     display: flex;
@@ -41,14 +48,10 @@
     padding: 15px;
 }
 
-#container4 {
+footer {
     border: 1px solid pink;
     margin: 20px;
     padding: 15px;
 }
 
-ul {
-    display: flex;
-    list-style: none;
-    justify-content: space-around;
-}
+
