--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,16 @@
 
 #header {
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-around;
     border: 1px solid red;
+    padding: 15px;
     margin: 20px;
 
+}
+h1 {
+    display: flex;
+    justify-content: center;
+    width: 100%;
 }
 
 /*#nav {
@@ -28,6 +34,7 @@ main{
     align-items: flex-end;
     background-color: white;
 }
+
 #aside {
     background-color: red;
     align-self: flex-start;
